--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ flask==3.0.3
 Werkzeug==3.0.2
 blinker==1.8.1
 click==8.1.7
-importlib-metadata=7.1.0
-itsdangerous=2.2.0
+importlib-metadata==7.1.0
+itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 zipp==3.18.1
